Add API bypass methods